<resources>
    <string name="app_name" translatable="false">2048</string>
    <string name="_4x4" translatable="false">4x4</string>
    <string name="_5x5" translatable="false">5x5</string>
    <string name="_6x6" translatable="false">6x6</string>
    <string name="_8x8" translatable="false">8x8</string>
    <string name="_3x5" translatable="false">3x5</string>
    <string name="_4x6" translatable="false">4x6</string>
    <string name="_5x8" translatable="false">5x8</string>
    <string name="_6x9" translatable="false">6x9</string>
    <string name="retry">Start new game?</string>
    <string name="game_over">Game over</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="score_count" translatable="false">%1$d.</string>
    <string name="score">SCORE</string>
    <string name="record">RECORD</string>
    <string name="no_games_played">No games played</string>
    <string name="count_label" translatable="false">№</string>
    <string name="date">Date</string>
    <string name="score_upr_lwr_case">Score</string>
</resources>